Fixed spacing between top bar and main

--- a/general/RMstyle.css
+++ b/general/RMstyle.css
@@ -25,7 +25,7 @@ body {
     font-family: sans-serif;
     margin: 0px;
     position: relative;
-    min-height: calc(100vh - 163px);
+    min-height: calc(100vh - 158px);
     padding-bottom: 103px;
 }
 
